# sota-bench

./: .gitignore  LICENSE  PROTOCOL.md  PUBLICATION_FIREWALL.md  README.md  SLICES.md  pyproject.toml
.github/workflows/: ci.yml
datasets/: authz_v1.jsonl
seeds/decode_v1/: README.md  decode_v1.jsonl  measurements_2026-06-09.json  run_2026-06-09.json
sota_bench/: __init__.py  __main__.py  admission.py  cvss.py  loop.py  provenance.py  publication_firewall.py  schema.py  scorer.py  stats.py  target_value.py  triad.py
sota_bench/adapters/: __init__.py  base.py  inspect_eval.py
tests/: test_admission.py  test_cli.py  test_comparability.py  test_cvss.py  test_dataset.py  test_loop.py  test_protocol.py  test_provenance.py  test_publication_firewall.py  test_schema.py  test_scorer.py  test_stats.py  test_target_value.py  test_triad.py
